# rocm_wmma_gemm

./: CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  bench.hpp
benchmark/gemm/: bench.cpp  bench_bf16_bf16.cpp  bench_float_bf16.cpp  bench_float_half.cpp  bench_half_half.cpp
benchmark/rocblas/: bench.cpp
cmake/: Dependencies.cmake
common/: matrix.hpp
docs/: generate_report.py  generate_report.sh  gfx1100_rectangle.md  gfx1100_square.md  gfx1151_rectangle.md  gfx1151_square.md  rectangle.md  square.md
rocblas_wrapper/: CMakeLists.txt
rocblas_wrapper/include/: gemm.hpp
rocblas_wrapper/include/rocblas_wrapper/: gemm.hpp
rocblas_wrapper/src/: gemm.cpp
rocm_wmma_gemm/: CMakeLists.txt
rocm_wmma_gemm/config/: gemm_config.json  gemm_config_gfx1100.json  gemm_config_gfx1100_f16.json  gemm_config_gfx1151.json  gemm_config_gfx1151_f16.json  generate_config.py  race.py  tune.py  tuner.cpp
rocm_wmma_gemm/include/: gemm.hpp
rocm_wmma_gemm/include/kernel/: common.hpp  fragment.hpp  kernel.hpp  kernel_launcher.hpp  load.hpp  mapping.hpp  wmma.hpp
rocm_wmma_gemm/include/rocm_wmma_gemm/: gemm.hpp  kernel_launcher.hpp  kernel_loader.hpp  kernel_lookup.hpp
rocm_wmma_gemm/include/rocm_wmma_gemm/kernel/: common.hpp  fragment.hpp  kernel.hpp  load.hpp  mapping.hpp  wmma.hpp
rocm_wmma_gemm/src/: gemm.cpp
test/: CMakeLists.txt  test.hpp
test/gemm/: test.cpp  test_float_accum.cpp  test_same_prec.cpp
test/rocblas/: test.cpp
